<resources>
    <string name="app_name">AccuTrack</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>

    <string name="accelerometer_label">Accelerometer (m/s<sup><small>2</small></sup>)</string>
    <string name="acc_values">ax:%1$.3f\t\t\t\tay:%2$.3f\t\t\t\taz:%3$.3f</string>

    <string name="gyroscope_label">Gyroscope (rad/s)</string>
    <string name="gyr_values">rx:%1$.3f\t\t\t\try:%2$.3f\t\t\t\trz:%3$.3f</string>

    <string name="magnetometer_label">Magnetometer (&#956;T)</string>
    <string name="mag_values">x:%1$.3f\t\t\t\ty:%2$.3f\t\t\t\tz:%3$.3f</string>

    <string name="gravity_vec_label">Gravity Vector (m/s<sup><small>2</small></sup>)</string>
    <string name="grav_values">gx:%1$.3f\t\t\t\tgy:%2$.3f\t\t\t\tgz:%3$.3f</string>

    <string name="gps_label">GPS</string>
    <string name="gps_values">LONG:%1f\t\t\t\tLAT:%2f</string>
</resources>